# ReFine-Lab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh  setup_uv.sh
archive/: README.md
archive/experiments/ppo/: train_ppo.py
data/: generate_preferences.py  prepare_sft_data.py  rubric_rewards.py
deployment/: benchmark.py  quantize.py
docs/: EXPERIMENTS.md  related_work.md
evaluation/: behavioral_metrics.py  eval_config.json  external_benchmarks.py  visualize.py
experiments/: run_experiments.sh
experiments/alignment/: train_dpo.py  train_kto.py  train_orpo.py  train_simpo.py
experiments/dpo/: train_dpo.py
experiments/grpo/: run_ablation.py  train_llm_judge_grpo.py  train_rv_grpo.py
experiments/rlhf/: pipeline.py
experiments/sft/: train_lora.py  train_sft.py
slurm/: 00_setup.sbatch  01_sft.sbatch  02_alignment.sbatch  03_eval.sbatch  README.md  pilot.sbatch  submit_all.sh
